# arches-rascolls

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.standalone.yml  docker-compose.yml  gettext.config.js  manage.py  package-lock.json  package.json  pyproject.toml  vitest.config.mts  vitest.setup.mts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-push-container.yml  build-ci-container.yml  main.yml
.runtime/hooks/: README.md  post_load.sh  post_reindex.sh  pre_start.sh
afrc/: apps.py  celery.py  hosts.py  settings.py  urls.py  wsgi.py
afrc/functions/: manage_searchable_values.py  multicard_resource_descriptor.py
afrc/migrations/: 0001_initial.py  0002_plugin.py  0003_function.py  0004_search_layer.py  0005_function_x_graphs.py  0005_report_config.py  0006_add_multicard_descriptor.py  0007_load_controlled_lists.py
afrc/templates/: arches_urls.htm  index.htm
afrc/utils/: geo_utils.py
afrc/views/: file_api.py  map_api.py  rascoll_search.py  search.py  search_api.py  settings_api.py
arches_rascolls/: apps.py  celery.py  hosts.py  settings.py  urls.py  wsgi.py
arches_rascolls/functions/: manage_searchable_values.py
arches_rascolls/migrations/: 0001_initial.py  0002_plugin.py  0003_function.py  0004_search_layer.py  0005_report_config.py  0006_add_multicard_descriptor.py  0007_load_controlled_lists.py  0008_update_basic_search_fn.py  0009_remove_manage_searchable_values.py  0010_plugin_visibility.py  0011_graph_relation_viewer_plugin.py
arches_rascolls/report_definitions/: reference_and_sample_collection_item.json  reference_and_sample_collection_item_1.json
arches_rascolls/templates/: arches_urls.htm  index.htm
arches_rascolls/utils/: geo_utils.py  node_lookup.py
arches_rascolls/views/: map_api.py  rascoll_search.py  resource_api.py  search_api.py  settings_api.py
docker/: arches-for-reference-and-sample-collection-supervisor.conf  arches-rascolls-supervisor.conf  entrypoint.sh  env_file.env
docker/conf.d/: arches-for-reference-and-sample-collection-celerybeat.conf  arches-for-reference-and-sample-collection-celeryd.conf  arches-rascolls-celerybeat.conf  arches-rascolls-celeryd.conf
docker/deploy/: task-definition-reset-database.json  task-definition.json
docker/development/: env_file.env  env_file.env.sample
docker/hooks/: README.md  post_load.sh  post_reindex.sh  pre_dev.sh  pre_start.sh
frontend_configuration/: tsconfig-paths.json  urls.json  webpack-metadata.json
pkg/: collections.xml  ref_and_sample_coll_aatxml.xml  ref_and_sample_coll_arches.xml  ref_and_sample_coll_crm_property.xml
tests/: test_report_configs.py  test_settings.py
webpack/: webpack.config.dev.js  webpack.config.prod.js
(+216 files in other folders)
